[package]
name = "booster-rustum"
version = "0.1.0"
edition = "2021"
description = "Booster UKI manager"
license-file = "LICENSE"
repository = "https://github.com/wadeduvall/booster-rustum"
keywords = ["booster", "uki"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
cargo = "deny"
style = "deny"
correctness = "deny"
perf = "warn"
enum_glob_use = "deny"
unwrap_used = "warn"
expect_used = "warn"
